Added Jan's addition to Exercise 3 section

--- a/main.tex
+++ b/main.tex
@@ -58,7 +58,7 @@
 %\renewcommand{\thesissupervisorname}{Instructor}
 \department{Department of Electrical Engineering and Automation}
 \univdegree{MSc}
-\author{Jan von Steuben 661119\\ Joseph Hotchkiss 658656}
+\author{Jan von Steuben 661119 \\ Joseph Hotchkiss 658656}
 \thesistitle{Translational Engineering Forum: Overview Report 1}
 \place{Espoo}
 \date{11.10.2018}
@@ -70,7 +70,6 @@
 %%%%%%%%%%%%%%%%%%%% Create the coverpage  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \makecoverpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 
 \newpage
 
@@ -138,11 +137,12 @@
 
 	For any kind of external money acquisition, a clear business plan must be present. When financing from one?s own pocket, or borrowing/involving family and friends, this must not be true, but in general, everyone putting time and money into an idea will want to see a plan on how to succeed. Using of crowdfunding can be an easy way to get some additional cash and an evaluation of the idea, as people will not invest in an idea they do not like or see a business. Going to a bank or investor, a clear strategy will often be required. It is of course possible that they will purchase the technology especially in case of intellectual property. 
 
-	There are also governmental or European Union funding (e.g. Horizon 2020) possible. There are funds for research, and others for start-ups for example from Business Finland. Moreover, joint ventures between industry and research institutes can be beneficial, of course depending on the type of product or service provided. 
+	There are also governmental or European Union funding (e.g. Horizon 2020) possible. There are funds for research, and others for start-ups for example from Business Finland. Moreover, joint ventures between industry and research institutes can be beneficial, of course depending on the type of product or service provided. Funding is often quite limited and other options for obtaining money might have to be considered. Using of e.g. venture capitalists, they will spend their money and time/expertise in exchange for equity. On the other hand, with their support and connections, a business can take off quite fast. One thing must be kept in mind when looking for investors or partners, the strategies must be matching to avoid conflicts. Some of the investors are interested only in growing the business fast and then sell it for a lot of profit. If your business is your life, you might not want to part with it, even if it means to decline an offer.  
 
 
 
 
 \end{document}
+
 
 
